--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "vue": "^2.5.2",
+    "vue-class-component": "^6.1.0",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
