--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "axios": "^0.17.1",
     "js-cookie": "^2.2.0",
     "vue": "^2.5.2",
-    "vue-class-component": "^6.1.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
@@ -21,6 +20,7 @@
     "autoprefixer": "^6.7.2",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
@@ -45,7 +45,9 @@
     "ts-loader": "^2.0.3",
     "typescript": "^2.3.2",
     "url-loader": "^0.5.8",
+    "vue-class-component": "^6.1.2",
     "vue-loader": "^11.3.4",
+    "vue-property-decorator": "^6.0.0",
     "vue-style-loader": "^2.0.5",
     "vue-template-compiler": "^2.2.6",
     "webpack": "^2.3.3",
