--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "vue-typescript-starter",
   "version": "1.0.0",
-  "description": "Typescript starter based on the Vue-cli webpack template",
-  "author": "Alex J <alexjovermorales@gmail.com>",
+  "description": "App to bring driving instructor to students",
+  "author": "Connor Lloyd Moore <connor@codegood.co>",
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
@@ -36,12 +36,15 @@
     "friendly-errors-webpack-plugin": "^1.1.3",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
+    "node-sass": "^4.7.2",
     "opn": "^4.0.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "ora": "^1.2.0",
     "rimraf": "^2.6.0",
+    "sass-loader": "^6.0.6",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
+    "style-loader": "^0.19.1",
     "ts-loader": "^2.0.3",
     "typescript": "^2.3.2",
     "url-loader": "^0.5.8",
