--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "https": "^1.0.0",
     "jquery": "^3.3.1",
     "js-cookie": "^2.2.0",
     "vue": "^2.5.2",
@@ -36,6 +37,7 @@
     "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.11.1",
     "friendly-errors-webpack-plugin": "^1.1.3",
+    "fs": "0.0.1-security",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
     "node-sass": "^4.7.2",
