--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "https": "^1.0.0",
     "jquery": "^3.3.1",
     "js-cookie": "^2.2.0",
+    "lodash": "^4.17.5",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
