--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jquery": "^3.3.1",
     "js-cookie": "^2.2.0",
     "lodash": "^4.17.5",
+    "moment": "^2.21.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
